update : little update

--- a/Triangle_fun/triangleornot.html
+++ b/Triangle_fun/triangleornot.html
@@ -46,7 +46,7 @@
 
     <div class="calculation">
         <h1>Enter Angle and see is Triangle or Not</h1>
-        <img style="height: 200px; width: 200px;" src="https://www.pngitem.com/pimgs/m/376-3764803_types-of-triangles-worksheets-triangle-hd-png-download.png" alt="Triangle"><br><br>
+        <h3 style="color: blue;">Sum of all angle of Triangle is 180<sup>o</sup> Degree</h3><br>
         Enter 1st Angle Degree : <input type="number" class="userinput" id="one"><br><br>
         Enter 2nd Angle Degree: <input type="number" class="userinput" id="two"><br><br>
         Enter 3rd Angle Degree: <input type="number" class="userinput" id="three"><br><br>
